		System: fixed error with deleting a record when multiple tabs are open for the same session
		System: moved Russian Ruble from PayPal to Other section in currency listing
		System: added Afaan Oromo as development language
		System: made translation credits in footer fairer
		System: simplified UI text in Parent Dashboard
		Activities: added notifications when students are bumped up into an activity on self unenrolment
		Activities: added logging of student activity changes in order to track sign up history
        Activities: added Activity Choices by Roll Group for ease of looking up student's activity times
		Attendance: added option for redirect to message wall after self registration has been taken
		Attendance: added year group selectors to reports for not present and not onsite
		Attendance: added ability for students to view their own attendance data for the current year
		Attendance: added ability to delete attendance with Manage Attendance Logs permission in Attendance by Person
		Finance: added logging for failed bulk email sends
		Form Group: added link to print listing of students in form group detail view
		Library: simplified interface for Duplicate in Manage Catalog
		Markbook: fixed multi-byte string length issue causing automatic comment expansion in Markbook view
		Messenger: added the ability to resend in By Roll Group view in View Send Report
		Messenger: added ability for uses with Manage Messages_all to resend on behalf of others
		Planner: fixed module name substitution in links in Lesson Planner
		Students: added sibling and family information to Letters Home by Roll Group
		Students: added Comment field to medical form, linked to student application form.
		Students: added View option to Students by Form Group report, allowing Basic or Extended view
		Students: changed School Attendance sub page to Attendance to improve UI consistency
		System Admin: fixed bug causing theme names with spaces to break the theme installer