@@ -179,7 +179,7 @@ class FileUploader
 
         // Optionally replace the filename, keeping the previous extension
         if (!empty($filenameChange)) {
-            $filename = $filenameChange.strrchr($filename, '.');
+            $filename = $filenameChange.mb_strrchr($filename, '.');
         }
 
         return $this->upload($filename, $sourcePath);
@@ -216,7 +216,7 @@ class FileUploader
 
         $extension = mb_substr(mb_strrchr(strtolower($filename), '.'), 1);
 
-        $name = mb_substr($filename, 0, mb_strpos($filename, '.'));
+        $name = mb_substr($filename, 0, mb_strrpos($filename, '.'));
         $name = preg_replace('/[^a-zA-Z0-9_-]/', '', $name);
 
         for ($count = 0; $count < 100; $count++) {
